--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pupoLeo Soluções Técnicas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -25,19 +25,7 @@
         <aside>
             <section id="home">
                 <h2>Bem-vindo à pupoLeo Soluções Técnicas</h2>
-                <p>Oferecemos as melhores soluções em tecnologia para o seu negócio.</p>
-            </section>
-            <section id="services">
-                <h2>Serviços</h2>
-                <p>Descrição dos serviços oferecidos.</p>
-            </section>
-            <section id="portfolio">
-                <h2>Portfólio</h2>
-                <p>Exemplos de projetos realizados.</p>
-            </section>
-            <section id="about">
-                <h2>Sobre</h2>
-                <p>Informações sobre o professor presidente e a empresa.</p>
+                <p>No momento esse site encontra-se em desenvolvimento. </p>
             </section>
             <section id="contact">
                 <h2>Contato</h2>
