--- a/contato.html
+++ b/contato.html
@@ -80,7 +80,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Estamos em</h3>
-              <address>Itaquaquecetuba - SP, Brasil.</address>
+              <address><a href="https://maps.app.goo.gl/sazxourLMNTCHZin7"> Itaquaquecetuba, SP - Brasil</a></address>
             </div>
         </div>
 
