--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#intro">Início</a></li>
-          <li><a href="#about">Sobre nós</a></li>
-          <li><a href="#services">Serviços</a></li>
           <li><a href="#portfolio">Galeria</a></li>
-          <li><a href="#team">Equipe</a></li>
           <li><a href="contato.html">Fale conosco</a></li>
+          <li><a href="#about">Sobre</a></li>
     </div>
   </header><!-- #header -->
 
