--- a/contato.html
+++ b/contato.html
@@ -39,24 +39,24 @@
 
   <!--==========================
     Header
-  ============================
+  ============================-->
   <header id="header">
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">pupoLeo</a></h1>
-     Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
-      </div>
+        <h1><a href="index.html" class="scrollto">pupoLeo</a></h1>
+     <!--Uncomment below if you prefer to use an image logo 
+         <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
+      </div>-->
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Início</a></li>
-          <li><a href="#about">Sobre nós</a></li>
-          <li><a href="#services">Serviços</a></li>
-          <li><a href="#portfolio">Galeria</a></li>
-          <li><a href="#team">Equipe</a></li>
-          <li><a href="#contact">Contato</a></li>
+          <li class="menu-active"><a href="index.html">Início</a></li>
+          <li><a href="index.html">Sobre nós</a></li>
+          <li><a href="index.html">Serviços</a></li>
+          <li><a href="index.html">Galeria</a></li>
+          <li><a href="index.html">Equipe</a></li>
+          <li><a href="contato.html">Contato</a></li>
   
     </div>
   </header>
