--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,9 @@
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/stylecopy.css" rel="stylesheet">
+
+  
 
   <!-- =======================================================
     Theme Name: BizPage
@@ -33,9 +35,12 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+
 </head>
 
 <body>
+  
+
 
   <!--==========================
     Header
@@ -46,18 +51,16 @@
       <div id="logo" class="pull-left">
         <h1><a href="index.html" class="scrollto">pupoLeo</a></h1>
      <!--Uncomment below if you prefer to use an image logo 
-         <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
-      </div>-->
+         <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
+      </div>
 
-      <nav id="nav-menu-container">
+     <!-- <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Início</a></li>
-          <li><a href="index.html">Sobre nós</a></li>
-          <li><a href="index.html">Serviços</a></li>
           <li><a href="index.html">Galeria</a></li>
-          <li><a href="index.html">Equipe</a></li>
-          <li><a href="contato.html">Contato</a></li>
-  
+          <li><a href="contato.html">Fale conosco</a></li>
+          <li><a href="index.html">Sobre</a></li>
+  -->
     </div>
   </header>
 
