--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,7 @@
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/stylecopy.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
   
 
@@ -49,9 +49,10 @@
     <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="index.html" class="scrollto">pupoLeo</a></h1>
-     <!--Uncomment below if you prefer to use an image logo 
-         <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
+        <!--<h1><a href="index.html" class="scrollto">pupoLeo</a></h1>
+     Uncomment below if you prefer to use an image logo -->
+
+         <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
       </div>
 
      <!-- <nav id="nav-menu-container">
