--- a/pupoleo copia.html
+++ b/pupoleo copia.html
@@ -82,7 +82,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Soluções técnicas</h2>
-                <p>Desde 2008 evoluindo com a tecnologia da informação. </p>
+                <p>"Desde 2008, oferecendo suporte técnico e soluções inovadoras para acompanhar a evolução da tecnologia da informação." </p>
                 <a href="contato.html" class="btn-get-started scrollto">Contato</a>
               </div>
             </div>
@@ -92,8 +92,8 @@
             <div class="carousel-background"><img src="img/intro-carousel/imagem2.png" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Consultorias técnicas</h2>
-                <p>Orientações em projetos, análises técnicas, compras e vendas de equipamentos, isso e muito mais </p>
+                <h2>Aulas técnicas</h2>
+                <p>"Com gratidão, seguimos ministrando aulas técnicas em diversas áreas da ciência da computação, promovendo especialização e conhecimento desde o início de nossa trajetória."</p>
                 <a href="contato.html" class="btn-get-started scrollto">Contato</a>
               </div>
             </div>
@@ -103,8 +103,8 @@
             <div class="carousel-background"><img src="img/intro-carousel/imagem3.png" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Aulas técnicas</h2>
-                <p>Com muita gratidão que desde o início da minha carreira no ramo das tecnologias de informação ministro também aulas técnicas nas mais variadas aréas de conhecimento das ciências computacionais. Se você ou seu negócio necessitam de especialização ficaremos gratos em atender a esse chamado.</p>
+                <h2>Consultorias técnicas</h2>
+                <p>"Prestamos consultorias completas para projetos, análises técnicas, compras, vendas e outras necessidades em tecnologia, garantindo excelência e confiança."</p>
                 <a href="contato.html" class="btn-get-started scrollto">Contato</a>
               </div>
             </div>
